# libpag-android

./: DEPS  README.md  build_ffmpeg_android.sh  build_linux.sh
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/ffavc/: CMakeLists.txt  build.gradle
android/libpag/: build.gradle
vendor_tools/: CMake.js  Platform.js  vendor.cmake
